--- a/src/projects.json
+++ b/src/projects.json
@@ -6,7 +6,7 @@
     "icon": "farmingicon",
     "livelink": "https://github.com/tuliotroche/farming",
     "github": "https://github.com/tuliotroche/farmingapp",
-    "photo": "https://media2.giphy.com/media/K2g83n6kzUlUI/giphy.gif?cid=ecf05e477uuyc43pz09ca3bs95gk3a4axkgv75dkquwe6zre&rid=giphy.gif"
+    "photo": "farmingherbs"
   },
   {
     "title": "Portfolio Website",
@@ -15,6 +15,6 @@
     "icon": "farmingicon",
     "livelink": "#",
     "github": "https://github.com/tuliotroche/portfolio",
-    "photo": "portfolioscreenshot.JPG"
+    "photo": "farmingherbs"
   }
 ]
